--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="div">
      <div class="form-container">
           <div class="form">
-               <input type="text" class="form-1" placeholder="Upcoming Match"> <br><br>
+               <input  type="text" class="form-1" placeholder="Upcoming Match"> <br><br>
                <input type="text" class="form-2" placeholder="All Group"> <br><br>
                <input type="Blog" class="form-3" placeholder="Blog"> <br><br>
      </div>
@@ -58,6 +58,7 @@
                          <span><i class="fa-solid fa-comment-dots"> 23</i>
                          </span>
                </div>
+               <!-- player start -->
                <div class="player">
                     <img src="assets/Blog Image.png" alt="">
                     <br><br>
