--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <div class="div">
      <div class="form-container">
           <div class="form">
-               <input  type="text" class="form-1" placeholder="Upcoming Match"> <br><br>
+               <input type="text" class="form-1" placeholder="Upcoming Match">    <br><br>
                <input type="text" class="form-2" placeholder="All Group"> <br><br>
-               <input type="Blog" class="form-3" placeholder="Blog"> <br><br>
+               <input a href="./another.html" type="Blog" class="form-3" placeholder="Blog" cursor="pointer" mouse="click">Blog</a> <br><br>
      </div>
         </div>
      <!-- picture div here -->
