--- a/another.html
+++ b/another.html
@@ -43,7 +43,7 @@ world</p>
 <div class="div">
      <div class="form-container">
           < class="form">
-               <input type="Upcoming Match" class="form-1" placeholder="Upcoming Match"><a href="index.html">Upcoming Match</a></input>br><br>
+               <input type="Upcoming Match" class="form-1" placeholder="Upcoming Match">br><br>
                <input type="text" class="form-2" placeholder="All Group"> 
 <br><br>
                <input type="Blog" class="form-3" placeholder="Blog"> <br><br>
